--- a/index.toml
+++ b/index.toml
@@ -367,3 +367,11 @@ version = "40368e5"
 repo_url = "https://github.com/Ral0s/mqtt-pwn"
 repo_tag = "v40368e5"
 license = "GPL-3.0"
+
+[packages.mirage]
+name = "mirage"
+description = "Mirage: an open-source and customizable tool designed to evaluate the security of embedded systems."
+version = "1.2"
+repo_url = "https://github.com/Ral0s/mirage"
+repo_tag = "v1.2"
+license = "MIT"
